{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "6d4be5dc-e3d6-481f-bb51-a243a2d1d410",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "7309bd78-0486-4472-864d-cdeee9629d9c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "b5f9b8ba-21ae-41cd-8dff-d4dd66683ecd",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "cb7caaca-b36a-4af6-b54a-f1e97d76af18",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0f7170e3-e57c-43dc-886d-2aa60c900a79",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7b737998-9e1a-4cea-95ec-5d4b096b12af",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1fe24d31-fe65-4712-9928-73c54a17593b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "PlayerActions",
            "id": "a884f13e-ef30-4c0b-843a-6f93baa30d4a",
            "actions": [
                {
                    "name": "Melee",
                    "type": "Button",
                    "id": "2d2cbcfb-f1db-437a-b229-015599f680c9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "ef7cc54e-41c3-4027-a7c1-95e93727aca5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Heal",
                    "type": "Button",
                    "id": "8e03f7c5-8070-4440-8d54-ce90aca3a36d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "db0b053b-677c-4256-9c2a-f1b5e022b6c7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Block",
                    "type": "Button",
                    "id": "a72f6c03-d39f-4ae1-b59d-e9b43224d22b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Spell",
                    "type": "Button",
                    "id": "c48c0885-279b-4413-b6c0-f35b91f8955c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "96aad6bd-3b68-4424-b200-0a29c04537fb",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Melee",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b2e1e2a-9c8c-4f78-a4b7-61e48f62cc07",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88ac3f2c-89c3-49df-ae2e-cdf0b947446d",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Heal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e46bf096-595a-4743-b7e1-646873ae66c1",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b2744532-4fc8-4ebe-b41c-7b8dddff2a80",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Block",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "759c1545-3b1c-438c-ba47-601daa90f061",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spell",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "a978b114-f827-4dd5-b351-a1f74deb7095",
            "actions": [
                {
                    "name": "Backpack",
                    "type": "Button",
                    "id": "8be32cc1-12fe-4eaa-8f00-157d7aa00d89",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CycleMenuRight",
                    "type": "Button",
                    "id": "237c9419-45ec-4c64-b654-118fc9c646f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CycleMenuLeft",
                    "type": "Button",
                    "id": "aefd054d-0fff-4ce6-93a0-5d52d31085ed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CycleSubmenuRight",
                    "type": "Button",
                    "id": "104d2247-05d1-4317-b0f6-bd0d8894669a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CycleSubmenuLeft",
                    "type": "Button",
                    "id": "6ab6231f-9dc2-4f98-9b7e-d97ffc7484f1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Close",
                    "type": "Button",
                    "id": "0726049b-073e-417f-98df-a8516bbad87a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "57d506a5-09cc-4bb3-bcd9-5302a2e29431",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Backpack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b0f9b33-b05c-4245-ac9c-1a58ac61c70a",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CycleMenuRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1aa23511-e783-4c30-a9a7-bd89fae6c4c4",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CycleMenuLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7aeb0400-125e-4a20-84fc-aa73b114628e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CycleSubmenuRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d41872d4-b05f-4f36-8965-b2a7acc0d2c7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CycleSubmenuLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92836cb3-bb75-4e5c-99f8-fbefa9762df4",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Close",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}